--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
 		</div>
 		<div class="jumbotron blocks-background" id="inverse">
 			<h1>Source Code</h1>
-			<p>The site's source code is hosted on GitHub. You can find the code <a href="#">here</a></p>
+			<p>The site's source code is hosted on GitHub. You can find the code <a href="https://github.com/jkings454/portfolio">here</a></p>
 		</div>
 		
 	</div>
