--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			<p>This site is my portfolio site. It's meant to be a sort of hub where you can find all of the information you might want to know about me. Hopefully, this will be a place where I can organize all of the great things that I make (and probably 
 			some not so great things too). Please, if you have any questions, please, email me at <a href="mailto:josh.nichols.lives@gmail.com">josh.nichols.lives@gmail.com</a> If you're curious about how I made this site, I have a page dedicated to it <a href="#">here.</a>
 			</p>
-			<a class="btn btn-default pull-right btn-lg">Tell me more!</a>
+			<a class="btn btn-default pull-right btn-lg" href="about.html">Tell me more!</a>
 			
 		</div>
 	</div>
