--- a/resume.html
+++ b/resume.html
@@ -40,6 +40,7 @@
 	<div class="page-header">
 		<h1>My Resume</h1>
 	</div>
+	<h3 class = "text-danger">Workin' on it!</h3>
 </div>
 <footer>
 	<div class="container-fluid">
